<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.parkside.cs.checklist.Checklist_Item_Create">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_checklist_item_create_name_textview"
        android:text="@string/activity_checklist_item_create_name_textview"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/activity_checklist_item_create_name_edittext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/activity_checklist_item_create_name_edittext"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/activity_checklist_item_create_name_textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_checklist_item_create_qty_textview"
        android:id="@+id/activity_checklist_item_create_qty_textview"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/activity_checklist_item_create_name_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBottom="@+id/activity_checklist_item_create_qty_textview"
        android:layout_toRightOf="@+id/activity_checklist_item_create_qty_textview"
        android:layout_alignRight="@+id/activity_checklist_item_create_name_edittext"
        android:layout_alignEnd="@+id/activity_checklist_item_create_name_edittext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_checklist_item_create_priority_textview"
        android:id="@+id/activity_checklist_item_create_priority_textview"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/activity_checklist_item_create_qty_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/activity_checklist_item_create_priority_edittext"
        android:layout_alignBottom="@+id/activity_checklist_item_create_priority_textview"
        android:layout_toRightOf="@+id/activity_checklist_item_create_priority_textview"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_checklist_item_create_description_textview"
        android:id="@+id/activity_checklist_item_create_description_textview"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/activity_checklist_item_create_priority_edittext"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/activity_checklist_item_create_description_edittext"
        android:layout_above="@+id/activity_checklist_item_create_cancel_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/activity_checklist_item_create_save_button"
        android:layout_alignEnd="@+id/activity_checklist_item_create_save_button"
        android:layout_below="@+id/activity_checklist_item_create_description_textview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_checklist_item_create_cancel_button"
        android:id="@+id/activity_checklist_item_create_cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_checklist_item_create_save_button"
        android:id="@+id/activity_checklist_item_create_save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
